5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1807_2572.log
== TEST (2019-06-11 16:20:42) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==0):
		a[i]+=1
	if(x[i]%3==0):
		b[i]+=1
print(b)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:23:33) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==0):
		a[i]+=1
	if(x[i]%2==1):
		b[i]+=1

		
-- EXECUTION TIME:
1.24199
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2572/main.py", line 10, in <module>
    b[i]+=1
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:29:51) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==0):
		a+=1
	if(x[i]%2!=0):
		b+=1

y=zeros(b,dtype=int)
for i in range(size(x)):
	if(x[i]%2!=0):
		y[i]=x[i]
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:30:05) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==0):
		a+=1
	if(x[i]%2!=0):
		b+=1

y=zeros(b,dtype=int)
for i in range(size(x)):
	if(x[i]%2!=0):
		y[i]+=x[i]
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:31:52) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==0):
		a+=1
	if(x[i]%2!=0):
		b+=1

y=zeros(b,dtype=int)
for k in range(size(x)):
	if(x[k]%2!=0):
		y[k]+=x[k]
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:32:33) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==0):
		a+=1
	if(x[i]%2!=0):
		b+=1

y=zeros(b,dtype=int)
for k in range(size(x)):
	if(x[k]%2!=0):
		y[k]+=x[i]
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:32:46) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==0):
		a+=1
	if(x[i]%2!=0):
		b+=1

y=zeros(b,dtype=int)
for k in range(size(x)):
	if(x[k]%2!=0):
		y[k]+=k
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:33:58) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==0):
		a+=1
	if(x[i]%2!=0):
		b+=1

y=zeros(b,dtype=int)
for k in range(size(y)):
	if(x[k]%2!=0):
		y[k]+=k
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:34:11) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==0):
		a+=1
	if(x[i]%2!=0):
		b+=1

y=zeros(b,dtype=int)
for k in range(size(y)):
	if(x[k]%2!=0):
		y[k]+=x[k]
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:35:40) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==0):
		a+=1
	if(x[i]%2!=0):
		b+=1

y=zeros(b,dtype=int)
for k in range(size(y)):
	if(x[k]%2==1):
		y[k]+=x[k]
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:35:49) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==0):
		a+=1
	if(x[i]%2!=0):
		b+=1

y=zeros(b,dtype=int)
for k in range(size(y)):
	if(x[k]%2==1):
		y[k]=x[k]
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:38:30) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==0):
		a+=1
	if(x[i]%2!=0):
		b+=1

y=zeros(b,dtype=int)

u=0


for k in range(size(y)):
	if(x[k]%2==1):
		y[k]=x[k]
		u+=1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:39:00) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==1):
		b+=1

y=zeros(b,dtype=int)

u=0


for k in range(size(x)):
	if(x[k]%2==1):
		u[k]=x[k]
		u+=1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:40:04) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==1):
		b+=1

y=zeros(b,dtype=int)

u=0


for k in range(size(x)):
	if(x[k]%2==1):
		y[k]=x[k]
		u+=1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:40:12) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==1):
		b+=1

y=zeros(b,dtype=int)

u=0


for k in range(size(y)):
	if(x[k]%2==1):
		y[k]=x[k]
		u+=1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:40:23) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==1):
		b+=1

y=zeros(b,dtype=int)

u=0


for k in range(x):
	if(x[k]%2==1):
		y[k]=x[k]
		u+=1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:41:03) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==1):
		b+=1

y=zeros(b,dtype=int)

u=0


for k in x:
	if(x[k]%2==1):
		y[k]=x[k]
		u+=1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:41:49) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==1):
		b+=1

y=zeros(b,dtype=int)

u=0


for k in x:
	if(x[k]%!=0):
		y[k]=x[k]
		u+=1
print(y)

-- ERROR:
File "XXXX", line 16
    if(x[k]%!=0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:41:58) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==1):
		b+=1

y=zeros(b,dtype=int)

u=0


for k in x:
	if(x[k]%2!=0):
		y[k]=x[k]
		u+=1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:42:20) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==1):
		b+=1

y=zeros(b,dtype=int)

u=0


for k in range(size(x)):
	if(x[k]%2!=0):
		y[k]=x[k]
		u+=1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:43:11) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==1):
		b+=1

y=zeros(b,dtype=int)

u=0


for k in range(size(x)):
	if(x[k]%2!=0):
		y[u]=x[k]
		u+=1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:43:19) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==1):
		b+=1

y=zeros(b,dtype=int)

u=0


for k in range(size(x)):
	if(x[k]%2!=0):
		y[u]=x[k]
		u+=1
print(y)

-- EXECUTION TIME:
1.16643
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:36:46) 
-- CODE:
from numpy import*

x=array(eval(input("")))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==1):
		b+=1

y=zeros(b,dtype=int)

u=0

for k in range(size(x)):
	if(x[k]%2!=0):
		y[u]=x[k]
		u+=1
print(y)

-- EXECUTION TIME:
0.680847
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
